# csc578BGlob

./: .gitignore  CMakeLists.txt  README.md
Glob/: CMakeLists.txt
Glob/include/: BlobSet.h  CMakeLists.txt  CannonBall.hpp  Glob.h  GlobScene.hpp  Grid.hpp  ImplicitFunction.h  ImplicitPolygonizer.h  Mesh.h  ParticleSet.h  QuatCamera.h  ShapeData.h  ShapeGenerator.h  SimpleMesh.h  Spline.h  SplineManager.hpp  Structure.h  stdafx.h
Glob/shaders/: CMakeLists.txt  ShaderPaths.hpp.in  glob.fs.glsl  glob.vs.glsl  grid.vs.glsl  spline.fs.glsl  spline.vs.glsl  structure.fs.glsl  structure.vs.glsl
Glob/source/: BlobSet.cpp  CMakeLists.txt  Glob.cpp  GlobScene.cpp  Grid.cpp  ImplicitFunction.cpp  ImplicitPolygonizer.cpp  Mesh.cpp  ParticleSet.cpp  QuatCamera.cpp  ShapeGenerator.cpp  SimpleMesh.cpp  Spline.cpp  SplineManager.cpp  Structure.cpp  main.cpp  stdafx.cpp
lab01-intro/: CMakeLists.txt
lab01-intro/include/: CMakeLists.txt  SimpleGLScene.hpp  Triangle.hpp
lab01-intro/shaders/: CMakeLists.txt  ShaderPaths.hpp.in  triangle.fs.glsl
lab01-intro/source/: CMakeLists.txt  SimpleGL.cpp  SimpleGLScene.cpp  Triangle.cpp
lab02-euler/: CMakeLists.txt
lab02-euler/include/: CMakeLists.txt  ColorCube.hpp  EulerScene.hpp  Grid.hpp  MayaCamera.hpp
lab02-euler/shaders/: CMakeLists.txt  ShaderPaths.hpp.in  cube.fs.glsl  cube.vs.glsl
lab02-euler/source/: CMakeLists.txt  ColorCube.cpp  EulerScene.cpp  MayaCamera.cpp  main.cpp
lab03-integration/: CMakeLists.txt
lab03-integration/include/: CMakeLists.txt  CannonBall.hpp  IntegrationScene.hpp  MayaCamera.hpp
lab03-integration/shaders/: CMakeLists.txt  ball.fs.glsl  ball.vs.glsl
lab03-integration/source/: CMakeLists.txt  CannonBall.cpp  IntegrationScene.cpp
lab04-splines/: CMakeLists.txt
lab04-splines/include/: Ball.hpp  CMakeLists.txt  Grid.hpp  MayaCamera.hpp  Spline.hpp  SplineScene.hpp
lab04-splines/shaders/: CMakeLists.txt  spline.fs.glsl  spline.vs.glsl
lab04-splines/source/: Ball.cpp  CMakeLists.txt  Grid.cpp  MayaCamera.cpp  Spline.cpp  SplineScene.cpp  main.cpp
notes/: RealTimeCollisionDetection.tex
notes/tex/: bounding_volumes.tex  bvh.tex  introduction.tex  preamble.tex
